--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -11,13 +11,16 @@
     <string name="speed_value_100ms">100ms</string>
     <string name="speed_value_250ms">250ms</string>
     <string name="speed_value_500ms">500ms</string>
+    <string name="speed_value_750ms">750ms</string>
     <string name="speed_value_1s">1s</string>
 
     <string name="start_game">खेल शुरू</string>
     <string name="menu_button">मेनू बटन</string>
     <string name="clear">स्पष्ट</string>
     <string name="free_soul_mode">मुक्त आत्मा मोड</string>
+    <string name="free_soul_mode_description">इंगित करता है कि मृत कोशिकाओं को साफ़ किया जाना चाहिए या नहीं</string>
     <string name="emoji_mode">इमोजी मोड</string>
+    <string name="emoji_mode_description">भरने के बजाय, इमोजी आइकन का एक सेट उपयोग किया जाता है</string>
     <string name="restart">पुनः आरंभ करें</string>
     <string name="stable_combination">स्थिर संयोजन 🎉</string>
     <string name="no_one_survived">कोई नहीं बचा 💀</string>
@@ -28,37 +31,61 @@
     <string name="set_field_dimensions">फ़ील्ड आयाम सेट करें</string>
     <string name="rows">पंक्तियों</string>
     <string name="columns">कॉलम</string>
+    <string name="one_step_duration">एक चरण की अवधि</string>
+    <string name="simulation_settings">सिमुलेशन सेटिंग्स</string>
     <string name="language">भाषा</string>
+    <string name="game_settings">खेल सेटिंग्स</string>
+    <string name="neighbors_for_reviving">पुनर्जीवित करने के लिए पड़ोसी</string>
+    <string name="neighbors_for_surviving">अस्तित्व के लिए पड़ोसी</string>
+    <string name="rules">नियम</string>
+    <string name="to_default">अकरण को</string>
     <string name="change_theme">विषय को परिवर्तित करें</string>
     <string name="application">आवेदन</string>
     <string name="information">जानकारी</string>
+    <string name="rules_set">नियम निर्धारित</string>
+    <string name="rate_dialog_title">क्या आपको यह ऐप पसंद आया\?</string>
+    <string name="rate_dialog_description">कृपया एक समीक्षा छोड़ कर आवेदन के बारे में अपनी राय साझा करें। आपका
+        रेटिंग से हमें सभी उपयोगकर्ताओं के लिए अपने एप्लिकेशन को बेहतर बनाने में मदद मिलेगी</string>
+    <string name="dont_ask_again">दोबारा मत पूछो</string>
+    <string name="later">बाद में</string>
+    <string name="rate">दर!</string>
+    <string name="custom_rules">कस्टम नियम</string>
+    <string name="rules_set_description">अलग-अलग गेम परिदृश्य देखने के लिए अलग-अलग नियम चुनें</string>
     <string name="other">अन्य</string>
+
+    <string name="stable">स्थिर</string>
+    <string name="chaotic">अराजक</string>
+    <string name="exploding">एक्सप्लोडिंग</string>
+    <string name="undefined">अपरिभाषित</string>
+
     <string name="open_in_wikipedia">विकिपीडिया में खोलें</string>
     <string name="JohnHortonConway">जॉन हॉर्टन कॉनवे</string>
     <string name="JohnHortonConway_card_description">अंग्रेजी गणितज्ञ ने महत्वपूर्ण बना दिया है
         परिमित समूहों, गाँठ सिद्धांत, संख्या सिद्धांत, कॉम्बिनेटरियल गेम सिद्धांत और कोडिंग सिद्धांत में योगदान।
-        विशेष रूप से, उन्हें मनोरंजक गणित में गेम ऑफ लाइफ नामक सेलुलर ऑटोमेटन का आविष्कार करने के लिए जाना जाता है
-    </string>
+        विशेष रूप से, उन्हें मनोरंजक गणित में गेम ऑफ लाइफ नामक सेलुलर ऑटोमेटन का आविष्कार करने के लिए जाना जाता है</string>
 
     <string name="the_game_of_life">जीवन संघरष</string>
-    <string name="GameOfLife_large_description">गेम ऑफ लाइफ, जिसे सिर्फ "लाइफ" के रूप में भी जाना जाता है, 1970 में
-        विकसित हुआ एक सेल्युलर ऑटोमेटन है। यह एक जीरो-प्लेयर गेम है, जिसका अर्थ है कि इसका विकास इसकी प्रारंभिक स्थिति
-        द्वारा निर्धारित होता है और इसके लिए अतिरिक्त क्रियाएँ आवश्यक नहीं हैं। एक व्यक्ति गेम ऑफ लाइफ के साथ इंटरएक्ट
-        करता है, एक प्रारंभिक रूप से रचित स्थिति बनाता है और देखता है कि यह कैसे विकसित होता है। यह ट्यूरिंग कम्प्लीट है
-        और एक यूनिवर्सल कन्स्ट्रक्टर या किसी अन्य ट्यूरिंग मशीन को मॉडल कर सकता है।
-    </string>
+    <string name="GameOfLife_large_description">जीवन का खेल, जिसे \"जीवन\" के नाम से भी जाना जाता है, एक सेलुलर ऑटोमेटन है
+        1970 में विकसित किया गया। यह एक शून्य-खिलाड़ी गेम है, जिसका अर्थ है कि इसका विकास इसकी प्रारंभिक स्थिति से निर्धारित होता है और
+        अतिरिक्त कार्रवाई की आवश्यकता नहीं है. एक व्यक्ति प्रारंभिक विन्यास बनाते हुए जीवन के खेल के साथ अंतःक्रिया करता है
+        और देख रहे हैं कि यह कैसे विकसित होता है। यह ट्यूरिंग पूर्ण है और एक सार्वभौमिक कंस्ट्रक्टर या किसी अन्य ट्यूरिंग का मॉडल बना सकता है
+        मशीन</string>
+
+    <string name="open_source_project">ओपन सोर्स प्रोजेक्ट</string>
+    <string name="open_source_project_description">आप संपूर्ण स्रोत कोड GitHub ⭐️ पर पा सकते हैं</string>
+
+    <string name="telegram_community">टेलीग्राम समुदाय से जुड़ें</string>
+    <string name="telegram_community_description">ऐप अपडेट के साथ बने रहें, शीघ्र निर्माण प्राप्त करें और परीक्षण में सहायता करें
+        नई सुविधाओं। अपने विचार सुझाएं, प्रश्न पूछें और त्वरित उत्तर प्राप्त करें</string>
 
     <string name="onb_1_headline">डॉ. जॉन कॉनवे</string>
     <string name="onb_1_description">1970 में सेलुलर ऑटोमेटा विकास के इस अनुकरण को तैयार किया गया, जिसे \"गेम\" कहा गया
-        जीवन का\\", जहां खेल के मैदान पर प्रत्येक कोशिका सरल नियमों का पालन करती है
-    </string>
+        जीवन का\\", जहां खेल के मैदान पर प्रत्येक कोशिका सरल नियमों का पालन करती है</string>
     <string name="onb_2_headline">नियम 1</string>
-    <string name="onb_2_description">एक खाली (मृत) कोशिका में, यदि वास्तव में तीन जीवित पड़ोसी हों, तो जीवन है
-        जन्म
-    </string>
+    <string name="onb_2_description">एक खाली (मृत) कोशिका में, यदि ठीक तीन जीवित पड़ोसी हों, तो जीवन है
+        जन्म</string>
     <string name="onb_3_headline">नियम 2</string>
     <string name="onb_3_description">यदि किसी जीवित कोशिका में दो या तीन जीवित पड़ोसी हों, तो वह जीवित रहती है;
-        अन्यथा, कोशिका मर जाती है (\"अकेलापन\" या \"भीड़भाड़\" के कारण)
-    </string>
+        अन्यथा, कोशिका मर जाती है (\"अकेलेपन\" या \"भीड़भाड़ के कारण\")</string>
 
 </resources>
