--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,64 +1,91 @@
 <resources>
-    <string name="app_name">Гра в життя</string>
+    <string name="app_name">Гра життя</string>
 
-    <string name="GameOfLife">Гра в життя</string>
+    <string name="GameOfLife">Гра життя</string>
     <string name="Settings">Налаштування</string>
-    <string name="Onboarding">Вступ</string>
-    <string name="drawer_GameOfLife_description">Гра в життя</string>
+    <string name="Onboarding">Онбордінг</string>
+    <string name="drawer_GameOfLife_description">Гра життя</string>
     <string name="drawer_Settings_description">Налаштування</string>
-    <string name="drawer_Onboarding_description">Вступ</string>
+    <string name="drawer_Onboarding_description">вступ</string>
 
-    <string name="speed_value_100ms">100мс</string>
-    <string name="speed_value_250ms">250мс</string>
-    <string name="speed_value_500ms">500мс</string>
+    <string name="speed_value_100ms">100 мс</string>
+    <string name="speed_value_250ms">250 мс</string>
+    <string name="speed_value_500ms">500 мс</string>
+    <string name="speed_value_750ms">750 мс</string>
     <string name="speed_value_1s">1с</string>
 
-    <string name="start_game">Старт</string>
+    <string name="start_game">Почни гру</string>
     <string name="menu_button">Кнопка меню</string>
-    <string name="clear">Очистити</string>
-    <string name="free_soul_mode">Вільні душі</string>
-    <string name="emoji_mode">Режим емодзі</string>
-    <string name="restart">Перезапуск</string>
-    <string name="stable_combination">Стабільне поєднання 🎉</string>
+    <string name="clear">ясно</string>
+    <string name="free_soul_mode">Безкоштовний режим душі</string>
+    <string name="free_soul_mode_description">Вказує, чи слід очистити мертві клітини</string>
+    <string name="emoji_mode">Режим Emoji</string>
+    <string name="emoji_mode_description">Замість заливки використовується набір іконок емодзі</string>
+    <string name="restart">Перезапустіть</string>
+    <string name="stable_combination">Стійке поєднання🎉</string>
     <string name="no_one_survived">Ніхто не вижив 💀</string>
-    <string name="alive">Живих</string>
-    <string name="deaths">Мертвих</string>
-    <string name="revivals">Відроджень</string>
-    <string name="switch_running_simulation">Переключити симуляцію</string>
-    <string name="set_field_dimensions">Розмір поля</string>
-    <string name="rows">Рядки</string>
+    <string name="alive">Живий</string>
+    <string name="deaths">Смерті</string>
+    <string name="revivals">Відродження</string>
+    <string name="switch_running_simulation">Симуляція бігу</string>
+    <string name="set_field_dimensions">Встановіть розміри поля</string>
+    <string name="rows">рядки</string>
     <string name="columns">Стовпці</string>
+    <string name="one_step_duration">Тривалість одного кроку</string>
+    <string name="simulation_settings">Налаштування симуляції</string>
     <string name="language">Мова</string>
+    <string name="game_settings">Налаштування гри</string>
+    <string name="neighbors_for_reviving">Сусіди за відродження</string>
+    <string name="neighbors_for_surviving">Сусіди на виживання</string>
+    <string name="rules">правила</string>
+    <string name="to_default">За замовчуванням</string>
     <string name="change_theme">Змінити тему</string>
-    <string name="application">Додаток</string>
+    <string name="application">застосування</string>
     <string name="information">Інформація</string>
-    <string name="other">Інше</string>
+    <string name="rules_set">Набір правил</string>
+    <string name="rate_dialog_title">Вам сподобався цей додаток\?</string>
+    <string name="rate_dialog_description">Будь ласка, поділіться своєю думкою про додаток, залишивши відгук. ваш
+        рейтинг допоможе нам покращити нашу програму для всіх користувачів</string>
+    <string name="dont_ask_again">Більше не питай</string>
+    <string name="later">Пізніше</string>
+    <string name="rate">Оцініть!</string>
+    <string name="custom_rules">Спеціальні правила</string>
+    <string name="rules_set_description">Виберіть різні набори правил, щоб побачити різні ігрові сценарії</string>
+    <string name="other">Інший</string>
+
+    <string name="stable">стабільний</string>
+    <string name="chaotic">хаотичний</string>
+    <string name="exploding">вибухаючий</string>
+    <string name="undefined">невизначений</string>
+
     <string name="open_in_wikipedia">Відкрити у вікіпедії</string>
     <string name="JohnHortonConway">Джон Хортон Конвей</string>
     <string name="JohnHortonConway_card_description">англійський математик, зробив значні
         внесок у скінченні групи, теорію вузлів, теорію чисел, теорію комбінаторних ігор і теорію кодування.
-        Примітно, що він відомий винаходом клітинного автомата під назвою «Гра життя» в рекреаційній математиці
-    </string>
+        Примітно, що він відомий винаходом клітинного автомата під назвою «Гра життя» в рекреаційній математиці</string>
 
     <string name="the_game_of_life">Гра життя</string>
-    <string name="GameOfLife_large_description">Гра життя, також відома просто як "Життя", є клітинним автоматом,
-        розробленим у 1970 році. Це гра для нульового гравця, що означає, що її еволюція визначається початковим станом
-        і не вимагає додаткових дій. Людина взаємодіє з Грою життя, створюючи початкову конфігурацію і спостерігаючи, як
-        вона розвивається. Вона є універсальною машиною Тьюрінга і може моделювати універсальний конструктор чи будь-яку
-        іншу машину Тьюрінга
-    </string>
+    <string name="GameOfLife_large_description">Гра в життя, також відома просто як «Життя», — це клітинний автомат
+        розроблено в 1970 році. Це гра без гравців, тобто її розвиток визначається початковим станом і
+        не вимагає додаткових дій. Людина взаємодіє з Гра Життя, створюючи початкову конфігурацію
+        і спостерігати, як він розвивається. Він повний Тьюринга і може моделювати універсальний конструктор або будь-який інший Тьюринг
+        машина</string>
+
+    <string name="open_source_project">Проект з відкритим кодом</string>
+    <string name="open_source_project_description">Ви можете знайти весь вихідний код на GitHub ⭐️</string>
+
+    <string name="telegram_community">Приєднуйтеся до спільноти Telegram</string>
+    <string name="telegram_community_description">Стежте за оновленнями програм, отримуйте ранні збірки та допомагайте тестувати
+        нові можливості. Пропонуйте свої ідеї, ставте запитання та отримуйте швидкі відповіді</string>
 
     <string name="onb_1_headline">Доктор Джон Конвей</string>
-    <string name="onb_1_description">У 1970 році розробив цю симуляцію еволюції клітинних автоматів, названу «Гра
-        у Життя», де кожна клітина ігрового поля підпорядковується простим правилам
-    </string>
+    <string name="onb_1_description">Розробив цю симуляцію еволюції клітинних автоматів у 1970 році під назвою \\"Game
+        of Life\\", де кожна клітинка на ігровому полі відповідає простим правилам</string>
     <string name="onb_2_headline">Правило 1</string>
-    <string name="onb_2_description">У порожній (мертвій) клітині, якщо живих сусідів рівно три, життя
-        відроджується
-    </string>
+    <string name="onb_2_description">У порожній (мертвій) клітині, якщо живих сусідів рівно три, життя є
+        народився</string>
     <string name="onb_3_headline">Правило 2</string>
-    <string name="onb_3_description">Якщо у живої клітини є два або три живі сусіди, вона продовжує жити;
-        в іншому випадку клітина гине (через «самотність» або «перенаселеність»)
-    </string>
+    <string name="onb_3_description">Якщо жива клітина має двох або трьох живих сусідів, вона продовжує жити;
+        інакше клітина гине (через «самотність» або «перенаселеність»)</string>
 
 </resources>
