--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -20,6 +20,8 @@
 
     <string name="speed_value_500ms">500 毫秒</string>
 
+    <string name="speed_value_750ms">750 毫秒</string>
+
     <string name="speed_value_1s">1 秒</string>
 
     <string name="start_game">开始游戏</string>
@@ -30,7 +32,11 @@
 
     <string name="free_soul_mode">自由灵魂模式</string>
 
+    <string name="free_soul_mode_description">指示是否应清除死亡细胞</string>
+
     <string name="emoji_mode">表情符号模式</string>
+
+    <string name="emoji_mode_description">使用一组表情符号图标代替填充</string>
 
     <string name="restart">重新开始</string>
 
@@ -52,9 +58,71 @@
 
     <string name="columns">列</string>
 
+    <string name="one_step_duration">一步持续时间</string>
+
+    <string name="simulation_settings">模拟设置</string>
+
     <string name="language">语言</string>
 
+    <string name="game_settings">游戏设置</string>
+
+    <string name="neighbors_for_reviving">邻居复兴</string>
+
+    <string name="neighbors_for_surviving">邻居为了生存</string>
+
+    <string name="rules">规则</string>
+
+    <string name="to_default">默认</string>
+
     <string name="change_theme">改变主题</string>
+
+    <string name="application">应用</string>
+
+    <string name="information">信息</string>
+
+    <string name="rules_set">规则设定</string>
+
+    <string name="rate_dialog_title">你喜欢这个应用程序吗？</string>
+
+    <string name="rate_dialog_description">请留下评论，分享您对该应用程序的看法。您的评分将帮助我们为所有用户改进我们的应用程序</string>
+
+    <string name="dont_ask_again">不要再问</string>
+
+    <string name="later">之后</string>
+
+    <string name="rate">速度！</string>
+
+    <string name="custom_rules">自定义规则</string>
+
+    <string name="rules_set_description">选择不同的规则集，看到不同的游戏场景</string>
+
+    <string name="other">其他</string>
+
+    <string name="stable">稳定的</string>
+
+    <string name="chaotic">混乱的</string>
+
+    <string name="exploding">爆炸</string>
+
+    <string name="undefined">不明确的</string>
+
+    <string name="open_in_wikipedia">在维基百科中打开</string>
+
+    <string name="JohnHortonConway">约翰·霍顿·康威</string>
+
+    <string name="JohnHortonConway_card_description">英国数学家，对有限群、结论、数论、组合博弈论和编码论做出了重大贡献。值得注意的是，他因发明娱乐数学中称为“生命游戏”的元胞自动机而闻名</string>
+
+    <string name="the_game_of_life">生命的游戏</string>
+
+    <string name="GameOfLife_large_description">生命游戏，也简称为生命，是 1970 年开发的元胞自动机。它是一款零玩家游戏，这意味着它的进化由其初始状态决定，不需要额外的动作。一个人与生命游戏互动，创建一个初始配置并观察它如何发展。它是图灵完备的，可以对通用构造函数或任何其他图灵机进行建模</string>
+
+    <string name="open_source_project">开源项目</string>
+
+    <string name="open_source_project_description">您可以在 GitHub 上找到完整的源代码⭐️</string>
+
+    <string name="telegram_community">加入电报社区</string>
+
+    <string name="telegram_community_description">随时关注应用程序更新、获取早期版本并帮助测试新功能。提出您的想法、提出问题并快速获得答案</string>
 
     <string name="onb_1_headline">约翰·康威博士</string>
 
