--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,71 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?><resources>
-
-    <string name="app_name">Le jeu de la vie</string>
-
-    <string name="GameOfLife">Le jeu de la vie</string>
-
-    <string name="Settings">Paramètres</string>
-
-    <string name="Onboarding">Intégration</string>
-
-    <string name="drawer_GameOfLife_description">Le jeu de la vie</string>
-
-    <string name="drawer_Settings_description">Paramètres</string>
-
-    <string name="drawer_Onboarding_description">Introduction</string>
-
-    <string name="speed_value_100ms">100ms</string>
-
-    <string name="speed_value_250ms">250ms</string>
-
-    <string name="speed_value_500ms">500ms</string>
-
-    <string name="speed_value_1s">1s</string>
-
-    <string name="start_game">Démarrer jeu</string>
-
-    <string name="menu_button">Bouton de menu</string>
-
-    <string name="clear">Clair</string>
-
-    <string name="free_soul_mode">Mode âme gratuit</string>
-
-    <string name="emoji_mode">Mode émoji</string>
-
-    <string name="restart">Redémarrage</string>
-
-    <string name="stable_combination">Combinaison stable &#127881;</string>
-
-    <string name="no_one_survived">Personne n\'a survécu &#128128;</string>
-
-    <string name="alive">Vivant</string>
-
-    <string name="deaths">Décès</string>
-
-    <string name="revivals">Réveils</string>
-
-    <string name="switch_running_simulation">Changer de simulation de course</string>
-
-    <string name="set_field_dimensions">Définir les dimensions du champ</string>
-
-    <string name="rows">Lignes</string>
-
-    <string name="columns">Colonnes</string>
-
-    <string name="language">Langue</string>
-
-    <string name="change_theme">Change le thème</string>
-
-    <string name="onb_1_headline">Dr John Conway</string>
-
-    <string name="onb_1_description">A conçu cette simulation de l\'évolution des automates cellulaires en 1970, appelée \"Jeu de la vie\", où chaque cellule sur le terrain de jeu suit des règles simples.</string>
-
-    <string name="onb_2_headline">Règle 1</string>
-
-    <string name="onb_2_description">Dans une cellule vide (morte), s\'il y a exactement trois voisins vivants, la vie naît</string>
-
-    <string name="onb_3_headline">Règle 2</string>
-
-    <string name="onb_3_description">Si une cellule vivante a deux ou trois voisins vivants, elle continue à vivre ; sinon, la cellule meurt (à cause de la solitude ou du surpeuplement)</string>
-
+      
+  <string name="app_name">Le jeu de la vie</string>
+      
+  <string name="GameOfLife">Le jeu de la vie</string>
+      
+  <string name="Settings">Paramètres</string>
+      
+  <string name="Onboarding">Intégration</string>
+      
+  <string name="drawer_GameOfLife_description">Le jeu de la vie</string>
+      
+  <string name="drawer_Settings_description">Paramètres</string>
+      
+  <string name="drawer_Onboarding_description">Introduction</string>
+      
+  <string name="speed_value_100ms">100ms</string>
+      
+  <string name="speed_value_250ms">250ms</string>
+      
+  <string name="speed_value_500ms">500ms</string>
+      
+  <string name="speed_value_750ms">750ms</string>
+      
+  <string name="speed_value_1s">1s</string>
+      
+  <string name="start_game">Démarrer jeu</string>
+      
+  <string name="menu_button">Bouton de menu</string>
+      
+  <string name="clear">Clair</string>
+      
+  <string name="free_soul_mode">Mode âme gratuit</string>
+      
+  <string name="free_soul_mode_description">Indique si les cellules mortes doivent être éliminées</string>
+      
+  <string name="emoji_mode">Mode émoji</string>
+      
+  <string name="emoji_mode_description">Au lieu de remplir, un ensemble d\'icônes emoji est utilisé</string>
+      
+  <string name="restart">Redémarrage</string>
+      
+  <string name="stable_combination">Combinaison stable &#127881;</string>
+      
+  <string name="no_one_survived">Personne n\'a survécu &#128128;</string>
+      
+  <string name="alive">Vivant</string>
+      
+  <string name="deaths">Décès</string>
+      
+  <string name="revivals">Réveils</string>
+      
+  <string name="switch_running_simulation">Changer de simulation de course</string>
+      
+  <string name="set_field_dimensions">Définir les dimensions du champ</string>
+      
+  <string name="rows">Lignes</string>
+      
+  <string name="columns">Colonnes</string>
+      
+  <string name="one_step_duration">Durée d\'une étape</string>
+      
+  <string name="simulation_settings">Paramètres de simulation</string>
+      
+  <string name="language">Langue</string>
+      
+  <string name="game_settings">Paramètres de jeu</string>
+      
+  <string name="neighbors_for_reviving">Des voisins pour se relancer</string>
+      
+  <string name="neighbors_for_surviving">Des voisins pour survivre</string>
+      
+  <string name="rules">Règles</string>
+      
+  <string name="to_default">Par défaut</string>
+      
+  <string name="change_theme">Change le thème</string>
+      
+  <string name="application">Application</string>
+      
+  <string name="information">Information</string>
+      
+  <string name="rules_set">Ensemble de règles</string>
+      
+  <string name="rate_dialog_title">Avez-vous aimé cette application ?</string>
+      
+  <string name="rate_dialog_description">Veuillez partager votre opinion sur l\'application en laissant un commentaire. Votre note nous aidera à améliorer notre application pour tous les utilisateurs</string>
+      
+  <string name="dont_ask_again">Ne demande plus</string>
+      
+  <string name="later">Plus tard</string>
+      
+  <string name="rate">Taux!</string>
+      
+  <string name="custom_rules">Règles personnalisées</string>
+      
+  <string name="rules_set_description">Choisissez différents ensembles de règles pour voir différents scénarios de jeu</string>
+      
+  <string name="other">Autre</string>
+      
+  <string name="stable">écurie</string>
+      
+  <string name="chaotic">chaotique</string>
+      
+  <string name="exploding">exploser</string>
+      
+  <string name="undefined">indéfini</string>
+      
+  <string name="open_in_wikipedia">Ouvrir sur Wikipédia</string>
+      
+  <string name="JohnHortonConway">John Horton Conway</string>
+      
+  <string name="JohnHortonConway_card_description">Mathématicien anglais, a apporté d\'importantes contributions aux groupes finis, à la théorie des nœuds, à la théorie des nombres, à la théorie combinatoire des jeux et à la théorie du codage. Il est notamment connu pour avoir inventé l\'automate cellulaire appelé Jeu de la Vie en mathématiques récréatives.</string>
+      
+  <string name="the_game_of_life">Le jeux de la vie</string>
+      
+  <string name="GameOfLife_large_description">Le Jeu de la Vie, également connu simplement sous le nom de Vie, est un automate cellulaire développé en 1970. Il s’agit d’un jeu sans joueur, ce qui signifie que son évolution est déterminée par son état initial et ne nécessite aucune action supplémentaire. Une personne interagit avec le Jeu de la Vie, créant une configuration initiale et observant son évolution. C\'est Turing complet et peut modéliser un constructeur universel ou toute autre machine de Turing</string>
+      
+  <string name="open_source_project">Projet open source</string>
+      
+  <string name="open_source_project_description">Vous pouvez trouver l\'intégralité du code source sur GitHub ⭐️</string>
+      
+  <string name="telegram_community">Rejoignez la communauté Telegram</string>
+      
+  <string name="telegram_community_description">Restez à l\'écoute des mises à jour des applications, obtenez les premières versions et aidez à tester de nouvelles fonctionnalités. Suggérez vos idées, posez des questions et obtenez des réponses rapides</string>
+      
+  <string name="onb_1_headline">Dr John Conway</string>
+      
+  <string name="onb_1_description">A conçu cette simulation de l\'évolution des automates cellulaires en 1970, appelée \"Jeu de la vie\", où chaque cellule sur le terrain de jeu suit des règles simples.</string>
+      
+  <string name="onb_2_headline">Règle 1</string>
+      
+  <string name="onb_2_description">Dans une cellule vide (morte), s\'il y a exactement trois voisins vivants, la vie naît</string>
+      
+  <string name="onb_3_headline">Règle 2</string>
+      
+  <string name="onb_3_description">Si une cellule vivante a deux ou trois voisins vivants, elle continue à vivre ; sinon, la cellule meurt (à cause de la solitude ou du surpeuplement)</string>
+  
 </resources>
