--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,71 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?><resources>
-
-    <string name="app_name">Jogo da vida</string>
-
-    <string name="GameOfLife">Jogo da vida</string>
-
-    <string name="Settings">Configurações</string>
-
-    <string name="Onboarding">Integração</string>
-
-    <string name="drawer_GameOfLife_description">Jogo da vida</string>
-
-    <string name="drawer_Settings_description">Configurações</string>
-
-    <string name="drawer_Onboarding_description">Introdução</string>
-
-    <string name="speed_value_100ms">100ms</string>
-
-    <string name="speed_value_250ms">250ms</string>
-
-    <string name="speed_value_500ms">500ms</string>
-
-    <string name="speed_value_1s">1s</string>
-
-    <string name="start_game">Começar o jogo</string>
-
-    <string name="menu_button">Botão de menu</string>
-
-    <string name="clear">Claro</string>
-
-    <string name="free_soul_mode">Modo alma grátis</string>
-
-    <string name="emoji_mode">Modo emoji</string>
-
-    <string name="restart">Reiniciar</string>
-
-    <string name="stable_combination">Combinação estável &#127881;</string>
-
-    <string name="no_one_survived">Ninguém sobreviveu &#128128;</string>
-
-    <string name="alive">Vivo</string>
-
-    <string name="deaths">Mortes</string>
-
-    <string name="revivals">Reavivamentos</string>
-
-    <string name="switch_running_simulation">Simulação de comutação em execução</string>
-
-    <string name="set_field_dimensions">Definir dimensões do campo</string>
-
-    <string name="rows">Linhas</string>
-
-    <string name="columns">colunas</string>
-
-    <string name="language">Linguagem</string>
-
-    <string name="change_theme">Mudar tema</string>
-
-    <string name="onb_1_headline">Dr.</string>
-
-    <string name="onb_1_description">Criou esta simulação da evolução dos autômatos celulares em 1970, chamada de \"Jogo da Vida\", onde cada célula no campo de jogo segue regras simples</string>
-
-    <string name="onb_2_headline">Regra 1</string>
-
-    <string name="onb_2_description">Em uma cela vazia (morta), se houver exatamente três vizinhos vivos, nasce a vida</string>
-
-    <string name="onb_3_headline">Regra 2</string>
-
-    <string name="onb_3_description">Se uma célula viva tiver dois ou três vizinhos vivos, ela continuará viva; caso contrário, a célula morre (devido à solidão ou superlotação)</string>
-
+      
+  <string name="app_name">Jogo da vida</string>
+      
+  <string name="GameOfLife">Jogo da vida</string>
+      
+  <string name="Settings">Configurações</string>
+      
+  <string name="Onboarding">Integração</string>
+      
+  <string name="drawer_GameOfLife_description">Jogo da vida</string>
+      
+  <string name="drawer_Settings_description">Configurações</string>
+      
+  <string name="drawer_Onboarding_description">Introdução</string>
+      
+  <string name="speed_value_100ms">100ms</string>
+      
+  <string name="speed_value_250ms">250ms</string>
+      
+  <string name="speed_value_500ms">500ms</string>
+      
+  <string name="speed_value_750ms">750ms</string>
+      
+  <string name="speed_value_1s">1s</string>
+      
+  <string name="start_game">Começar o jogo</string>
+      
+  <string name="menu_button">Botão de menu</string>
+      
+  <string name="clear">Claro</string>
+      
+  <string name="free_soul_mode">Modo alma grátis</string>
+      
+  <string name="free_soul_mode_description">Indica se as células mortas devem ser eliminadas</string>
+      
+  <string name="emoji_mode">Modo emoji</string>
+      
+  <string name="emoji_mode_description">Em vez de preencher, um conjunto de ícones emoji é usado</string>
+      
+  <string name="restart">Reiniciar</string>
+      
+  <string name="stable_combination">Combinação estável &#127881;</string>
+      
+  <string name="no_one_survived">Ninguém sobreviveu &#128128;</string>
+      
+  <string name="alive">Vivo</string>
+      
+  <string name="deaths">Mortes</string>
+      
+  <string name="revivals">Reavivamentos</string>
+      
+  <string name="switch_running_simulation">Simulação de comutação em execução</string>
+      
+  <string name="set_field_dimensions">Definir dimensões do campo</string>
+      
+  <string name="rows">Linhas</string>
+      
+  <string name="columns">Colunas</string>
+      
+  <string name="one_step_duration">Duração de uma etapa</string>
+      
+  <string name="simulation_settings">Configurações de simulação</string>
+      
+  <string name="language">Linguagem</string>
+      
+  <string name="game_settings">Configurações do jogo</string>
+      
+  <string name="neighbors_for_reviving">Vizinhos para reviver</string>
+      
+  <string name="neighbors_for_surviving">Vizinhos para sobreviver</string>
+      
+  <string name="rules">Regras</string>
+      
+  <string name="to_default">Para o padrão</string>
+      
+  <string name="change_theme">Mudar tema</string>
+      
+  <string name="application">Aplicativo</string>
+      
+  <string name="information">Informação</string>
+      
+  <string name="rules_set">Conjunto de regras</string>
+      
+  <string name="rate_dialog_title">Você gostou deste aplicativo?</string>
+      
+  <string name="rate_dialog_description">Por favor, compartilhe sua opinião sobre o aplicativo deixando um comentário. Sua avaliação nos ajudará a melhorar nosso aplicativo para todos os usuários</string>
+      
+  <string name="dont_ask_again">Não pergunte novamente</string>
+      
+  <string name="later">Mais tarde</string>
+      
+  <string name="rate">Avaliar!</string>
+      
+  <string name="custom_rules">Regras personalizadas</string>
+      
+  <string name="rules_set_description">Escolha diferentes conjuntos de regras para ver diferentes cenários de jogo</string>
+      
+  <string name="other">Outro</string>
+      
+  <string name="stable">estábulo</string>
+      
+  <string name="chaotic">caótico</string>
+      
+  <string name="exploding">explodindo</string>
+      
+  <string name="undefined">indefinido</string>
+      
+  <string name="open_in_wikipedia">Abrir na Wikipédia</string>
+      
+  <string name="JohnHortonConway">John Horton Conway</string>
+      
+  <string name="JohnHortonConway_card_description">Matemático inglês, fez contribuições significativas para grupos finitos, teoria dos nós, teoria dos números, teoria dos jogos combinatórios e teoria da codificação. Notavelmente, ele é conhecido por inventar o autômato celular chamado Jogo da Vida na matemática recreativa.</string>
+      
+  <string name="the_game_of_life">O jogo da vida</string>
+      
+  <string name="GameOfLife_large_description">O Jogo da Vida, também conhecido simplesmente como Vida, é um autômato celular desenvolvido em 1970. É um jogo sem jogadores, o que significa que a sua evolução é determinada pelo seu estado inicial e não requer ações adicionais. A pessoa interage com o Jogo da Vida, criando uma configuração inicial e observando como ela se desenvolve. É Turing completo e pode modelar um construtor universal ou qualquer outra máquina de Turing</string>
+      
+  <string name="open_source_project">Projeto de código aberto</string>
+      
+  <string name="open_source_project_description">Você pode encontrar o código-fonte completo no GitHub ⭐️</string>
+      
+  <string name="telegram_community">Junte-se à comunidade do Telegram</string>
+      
+  <string name="telegram_community_description">Fique atento às atualizações do aplicativo, obtenha versões iniciais e ajude a testar novos recursos. Sugira suas ideias, faça perguntas e obtenha respostas rápidas</string>
+      
+  <string name="onb_1_headline">Dr.</string>
+      
+  <string name="onb_1_description">Criou esta simulação da evolução dos autômatos celulares em 1970, chamada de \"Jogo da Vida\", onde cada célula no campo de jogo segue regras simples</string>
+      
+  <string name="onb_2_headline">Regra 1</string>
+      
+  <string name="onb_2_description">Em uma cela vazia (morta), se houver exatamente três vizinhos vivos, nasce a vida</string>
+      
+  <string name="onb_3_headline">Regra 2</string>
+      
+  <string name="onb_3_description">Se uma célula viva tiver dois ou três vizinhos vivos, ela continuará viva; caso contrário, a célula morre (devido à solidão ou superlotação)</string>
+  
 </resources>
